--- a/vignettes/Rcpp.bib
+++ b/vignettes/Rcpp.bib
@@ -137,7 +137,7 @@
                   Allaire and Kevin Ushey and Qiang Kou and
                   John Chambers and Douglas Bates},
   year =	 2015,
-  note =	 {R package version 0.12.0},
+  note =	 {R package version 0.12.1},
   url =		 CRAN # "package=Rcpp"
 }
 
@@ -171,10 +171,10 @@
 @Manual{CRAN:RcppArmadillo,
   title =	 {RcppArmadillo: Rcpp integration for Armadillo
                   templated linear algebra library},
-  author =	 {Romain Fran\c{c}ois and Dirk Eddelbuettel and
+  author =	 {Dirk Eddelbuettel and Romain Fran\c{c}ois and 
                   Douglas Bates},
   year =	 2015,
-  note =	 {R package version 0.5.200.1.0},
+  note =	 {R package version 0.5.500.2.0},
   url =		 CRAN # "package=RcppArmadillo"
 }
 
