--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2015-11-01  Dirk Eddelbuettel  <edd@debian.org>
+
+        * DESCRIPTION: Roll Version: to 0.12.1.4
+
 2015-10-30  Nathan Russell <russell.nr2012@gmail.com>
 
         * inst/include/Rcpp/sugar/functions/cummax.h: New sugar function
