new unit tests for transpose

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,9 @@
         * inst/include/Rcpp/vector/Matrix.h (Rcpp): Matrix transpose is now a
         free function for both INTSXP and REALSXP
 
+        * inst/unitTests/runit.Matrix.R: New unit tests
+        * inst/unitTests/cpp/Matrix.cpp: Ditto
+
 2015-11-08  Daniel C. Dillon  <dcdillon@gmail.com>
 
         * inst/include/Rcpp/Nullable.h: No longer prevent assignment of
