--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2015-11-11  Qiang Kou <qkou@umail.iu.edu>
+
+        * include/Rcpp/complex.h: operator<< for Rcomplex
+
 2015-11-08  Daniel C. Dillon  <dcdillon@gmail.com>
 
         * inst/include/Rcpp/Nullable.h: No longer prevent assignment of
