further simplification (with a tip of the hat to Kevin)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2015-11-11  Dirk Eddelbuettel  <edd@debian.org>
+
+        * inst/include/Rcpp/vector/Matrix.h: Further simplification
+
 2015-11-11  Qiang Kou <qkou@umail.iu.edu>
 
         * include/Rcpp/complex.h: operator<< for Rcomplex
