--- a/vignettes/Rcpp-FAQ.Rnw
+++ b/vignettes/Rcpp-FAQ.Rnw
@@ -444,13 +444,13 @@ To install XCode Command Line Tools, one must do the following:
     \item Open \texttt{Terminal} found in \texttt{/Applications/Utilities/}
     \item Type the following: 
 <<osx_xcode,engine='bash', eval = F>>=
-xcode-select --install
+$ xcode-select --install
 @
     \item Press "Install" on the window that pops up.
     \item After the installation is complete, type the following in \texttt{Terminal} to ensure the installation was successful:
  
-<<osx_xcode,engine='bash', eval = F>>=
-gcc --version
+<<osx_xcode_gcc,engine='bash', eval = F>>=
+$ gcc --version
 @
 \end{enumerate}
 
@@ -458,20 +458,28 @@ After major system's update, e.g. 10.11 to 10.12, you may need to accept the ter
 
 To do so, open the \texttt{Terminal} found in \texttt{/Applications/Utilities/} and type:
 
-<<osx_xcode,engine='bash', eval = F>>=
-git
+<<osx_xcode_git,engine='bash', eval = F>>=
+$ git
 @
 
 Press spacebar to move down to the end of the file. There, you should see a prompt asking whether or not you accept the terms via either "Yes" or "No". Enter "Yes" if you agree to the terms to have the command line tools reactivated.
 
 \subsubsection{Differing Mac OS X R Versions Leading to Binary Failures}
 
-There are currently two distinct versions of R for OS X. The first version is a legacy version meant for Mac OS X 10.6 (Snow Leopard) - 10.8 (Mountain Lion). The second version is for more recent system Mac OS X 10.9 (Maverick), 10.10 (Yosemite), 10.11 (El Capitan). The distinction comes as a result of a change in the compilers shipped with the operating system. As a result, avoid sending package binaries if it is known that your collaborators are working on older systems as the R binaries for these two versions will not be able to mix.
+There are currently two distinct versions of R for OS X. The first version is a legacy version meant for Mac OS X 10.6 (Snow Leopard) - 10.8 (Mountain Lion). The second version is for more recent system Mac OS X 10.9 (Mavericks), 10.10 (Yosemite), 10.11 (El Capitan). The distinction comes as a result of a change in the compilers shipped with the operating system. As a result, avoid sending package binaries if it is known that your collaborators are working on older systems as the R binaries for these two versions will not be able to mix.
 
 \subsubsection{No OpenMP Support}
-The OS X operating environment lacks the ability to parallelize sections of code using the \href{http://openmp.org/wp/}{OpenMP} standard. As a result, make sure to protect any parallelized sections of code with:
+The OS X operating environment lacks the ability to parallelize sections of code using the \href{http://openmp.org/wp/}{OpenMP} standard. As a result, make sure to protect any reference to OpenMP. In this case, protect the inclusion of headers with:
 
-<<osx_openmp, engine="Rcpp", eval = F>>=
+<<osx_openmp_header, engine="Rcpp", eval = F>>=
+#ifdef _OPENMP
+  #include <omp.h>
+#endif
+@
+
+And when one goes to parallelize portions of code use:
+
+<<osx_openmp_code, engine="Rcpp", eval = F>>=
 #ifdef _OPENMP
     // multithreaded OpenMP version of code
 #else
@@ -481,7 +489,7 @@ The OS X operating environment lacks the ability to parallelize sections of code
 
 Doing so will enable the parallelization of the process on Linux and Windows. In the event that Apple enables OpenMP later on, this code will also allow for parallelization to occur.
 
-The reason for the lack of OpenMP support is because the under OS X, you are not using the \texttt{gcc} compiler. Instead, all the requests are being redirected to \texttt{llvm}. As of LLVM 3.7, the \href{https://clang-omp.github.io/}{community initiative} to enable OpenMP has been merged into the \href{http://openmp.llvm.org/}{official branch}. Thus, there is hope in the next release of Xcode (around WWDC in June 2016) that OpenMP will work on OS X. 
+The reason for the lack of OpenMP support is because under OS X, you are not using the \texttt{gcc} compiler. Instead, all the requests are being redirected to \texttt{llvm}. As of LLVM 3.7, the \href{https://clang-omp.github.io/}{community initiative} to enable OpenMP has been merged into the \href{http://openmp.llvm.org/}{official branch}. Thus, there is hope in the next release of Xcode (around WWDC in June 2016) that OpenMP will work on OS X. 
 
 
 \subsubsection{Additional Information / Help}
@@ -492,7 +500,7 @@ Below are additional resources that provide information regarding compiling Rcpp
     \item A helpful post was provided by Brian Ripley regarding the use of compiling R code with OS X in April 2014 \href{https://stat.ethz.ch/pipermail/r-sig-mac/2014-April/010835.html}{on the \code{r-sig-mac} list}, which is generally recommended for OS X-specific questions and further consultation.
     \item Another helpful write-up for installation / compilation on OS X Mavericks is
 provided \href{http://www.bioconductor.org/developers/how-to/mavericks-howto/}{by the BioConductor project}.
-    \item Lastly, another resource that exists for installation / compilation help is provided at \url{thecoatlessprofessor.com/programming/r-compiler-tools-for-rcpp-on-os-x/}.
+    \item Lastly, another resource that exists for installation / compilation help is provided at \url{http://thecoatlessprofessor.com/programming/r-compiler-tools-for-rcpp-on-os-x/}.
 \end{enumerate}
 
 \textbf{Note:} If you are running into trouble compiling code with RcppArmadillo, please also see \faq{q:OSXArma} listed below. 
