--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2016-02-07  Dirk Eddelbuettel  <edd@debian.org>
+
+        * vignettes/Rcpp-FAQ.Rnw: Added a table of contents
+
 2016-02-06  James J Balamuta  <balamut2@illinois.edu>
 
         * vignettes/Rcpp-FAQ.Rnw (Rcpp): Additional material, and corrections,
