--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2016-02-16  Dirk Eddelbuettel  <edd@debian.org>
+
+        * vignettes/Rcpp-FAQ.Rnw: Added answer on fixed-size limit of arguments
+
 2016-02-07  Dirk Eddelbuettel  <edd@debian.org>
 
         * R/Attributes.R (sourceCppFunction): Use fully matched seq(along.with=...)
