--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2016-02-23  Dirk Eddelbuettel  <edd@debian.org>
+
+        * inst/examples/OpenMP/OpenMPandInline.r: Switched to '/usr/bin/env r'
+        * inst/examples/RcppInline/RcppSimpleExample.r: Idem
+        * inst/examples/RcppInline/RObject.r: Idem
+        * inst/examples/RcppInline/UncaughtExceptions.r: Idem
+
 2016-02-21  Dirk Eddelbuettel  <edd@debian.org>
 
         * inst/examples/functionCallback/newApiExample.r (vecfunc): Switched to
