--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,38 @@
+2016-03-04  Dirk Eddelbuettel  <edd@debian.org>
+
+        * inst/unitTests/runit.Function.R: Switched to '/usr/bin/env r'
+        * inst/unitTests/runit.table.R: Idem
+        * inst/unitTests/runit.as.R: Idem
+        * inst/unitTests/runit.Date.R: Idem
+        * inst/unitTests/runit.misc.R: Idem
+        * inst/unitTests/runit.Language.R: Idem
+        * inst/unitTests/runit.subset.R: Idem
+        * inst/unitTests/runit.wrap.R: Idem
+        * inst/unitTests/runit.sugar.R: Idem
+        * inst/unitTests/runit.na.R: Idem
+        * inst/unitTests/runit.String.R: Idem
+        * inst/unitTests/runit.Vector.R: Idem
+        * inst/unitTests/runit.environments.R: Idem
+        * inst/unitTests/runit.Reference.R: Idem
+        * inst/unitTests/runit.Matrix.R: Idem
+        * inst/unitTests/runit.client.package.R: Idem
+        * inst/unitTests/runit.binary.package.R: Idem
+        * inst/unitTests/runit.support.R: Idem
+        * inst/unitTests/runit.S4.R: Idem
+        * inst/unitTests/runit.RObject.R: Idem
+        * inst/unitTests/runit.modref.R: Idem
+        * inst/unitTests/runit.InternalFunctionCPP11.R: Idem
+        * inst/unitTests/runit.attributes.R: Idem
+        * inst/unitTests/runit.sugar.var.R: Idem
+        * inst/unitTests/runit.Module.R: Idem
+        * inst/unitTests/runit.XPTr.R: Idem
+        * inst/unitTests/runit.Module.client.package.R: Idem
+        * inst/unitTests/runit.stats.R: Idem
+        * inst/unitTests/runit.rmath.R: Idem
+        * inst/unitTests/runit.DataFrame.R: Idem
+        * inst/unitTests/runit.wstring.R: Idem
+        * inst/unitTests/runit.InternalFunction.R: Idem
+
 2016-03-03  Dirk Eddelbuettel  <edd@debian.org>
 
         * inst/examples/FastLM/benchmarkLongley.r: Switched to '/usr/bin/env r'
