--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,14 @@
         * ChangeLog: Added entries for PRs 453 and 454
         * inst/NEWS.Rd: Add two missing \item uses
 
+        * R/Module.R: Rename copy to copyObject to avoid function name collisions
+        * inst/unitTests/runit.Module.R: Ditto
+        * man/copyObject.Rd: Ditto
+        * inst/NEWS.Rd: Ditto
+        * NAMESPACE: Ditto
+
+        * inst/unitTests/runit.environments.R: Skip test.environment.child test
+
 2016-03-31  Romain Francois <romain@r-enthusiasts.com>
 
         * R/Modules.R: New top-level functions copy, destruct and is_destructed
@@ -31,7 +39,7 @@
 
 2016-03-27  Qin Wenfeng  <mail@qinwenfeng.com>
 
-        * R/Attributes.R: Support R 3.3.0 Windows new toolchain
+        * R/Attributes.R: Support new R 3.3.0 Windows toolchain
 
 2016-03-26  Dirk Eddelbuettel  <edd@debian.org>
 
