--- a/vignettes/Rcpp-modules.Rnw
+++ b/vignettes/Rcpp-modules.Rnw
@@ -908,11 +908,24 @@ options( prompt = " ", continue = " " )
 @
 
 <<eval=FALSE>>=
-import( Rcpp )
+import(Rcpp)
 @
 
+In some case we have found that explicitly naming a symbol can be preferable:
+
+<<eval=FALSE>>=
+import(Rcpp, evalCpp)
+@
+
+\subsubsection{Load the module}
+
+\paragraph{Deprecated older method using loadRcppModules} 
+
+Note: This approach is deprecated as of Rcpp 0.12.5, and now triggers a warning
+message.  Eventually this function will be withdrawn.
+
 The simplest way to load all functions and classes from a module directly
-into a package namespace is to use the \code{loadRcppModules} function
+into a package namespace used to be to use the \code{loadRcppModules} function
 within the \code{.onLoad} body.
 
 <<eval=FALSE>>=
@@ -936,6 +949,8 @@ The \code{loadRcppModules} function has a single argument \texttt{direct}
 with a default value of \texttt{TRUE}. With this default value, all content
 from the module is exposed directly in the package namespace. If set to
 \texttt{FALSE}, all content is exposed as components of the module.
+
+\paragraph{Preferred current method using loadModule}   
 
 Starting with release 0.9.11, an alternative is provided by the
 \code{loadModule()} function which takes the module name as an argument.
